# fl

./: .gitignore  CHECKPOINTS.md  CLAUDE.md  Cargo.toml  DEFERRED.md  PRD.md  README.md  SPECS.md  STATUS.md  WORK_ORDER.md  build.ps1
.cargo/: config.toml
.claude/: settings.json
.claude/skills/fljanitor/: SKILL.md
.claude/skills/flsession/: SKILL.md
.claude/skills/refgap/: SKILL.md
.claude/skills/samplelib/: SKILL.md
.claude/skills/vitalgen/: SKILL.md
.claude/skills/voxrip/: SKILL.md
docs/: ASCEND.md  BANDAID.md  CARVE.md  CHAMBER.md  CHORALE.md  CLEAVE.md  DRIFT.md  EMBER.md  FLYBY.md  GRIT.md  HALT.md  IMPACT.md  MURMUR.md  NERVE.md  OUROBOROS.md  OVERSEER.md  PATINA.md  PLUCK.md  PRESETS.md  SEANCE.md  SHAPESHIFT.md  SMUDGE.md  SNAP.md  SOUND-PASS.md  SWARM.md  TRACER.md  TRIAGE-2026-07-08.md  UI.md  UNDERTOW.md  VOXFIT.md  VOXKEY.md  W1-RUMBLE-BASSLINE.md  W2-BREAK-CHOP.md  W3-DARK-PROGRESSION.md  W4-SESSION-BOOTSTRAP.md  W5-PROJECT-JANITOR.md  W6-SAMPLE-LIBRARIAN.md  W7-REFERENCE-GAP.md  W8-VITALGEN.md  W9-VOXRIP.md  (+3 more)
docs/design/: pedal-themes.html
docs/triage/: cluster1-firstwave.md  cluster2-leseclones.md  cluster3-generators-vocal.md  cluster4-phase3A.md  cluster5-phase3B.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
plugins/_template/: Cargo.toml
plugins/_template/src/: lib.rs
plugins/ascend/: Cargo.toml
plugins/ascend/src/: dsp.rs  lib.rs  presets.rs  render_tests.rs
plugins/bandaid/: Cargo.toml
plugins/bandaid/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/carve/: Cargo.toml
plugins/carve/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/chamber/: Cargo.toml
plugins/chamber/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/chorale/: Cargo.toml
plugins/chorale/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/cleave/: Cargo.toml
plugins/cleave/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/drift/: Cargo.toml
plugins/drift/src/: dsp.rs  lib.rs  presets.rs
plugins/ember/: Cargo.toml
plugins/ember/src/: dsp.rs  lib.rs  presets.rs
plugins/flyby/: Cargo.toml
plugins/flyby/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/grit/: Cargo.toml
plugins/grit/src/: dsp.rs  lib.rs  presets.rs
plugins/halt/: Cargo.toml
plugins/halt/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/impact/: Cargo.toml  build.rs
plugins/impact/src/: dsp.rs  lib.rs  presets.rs  render_tests.rs
plugins/murmur/: Cargo.toml
plugins/murmur/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/nerve/: Cargo.toml
plugins/nerve/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/ouroboros/: Cargo.toml
plugins/ouroboros/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/overseer/: Cargo.toml
plugins/overseer/src/: audit.rs  bus.rs  dynamics.rs  enrich.rs  eq.rs  lib.rs  master.rs  node.rs  presets.rs
plugins/patina/: Cargo.toml
plugins/patina/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/pluck/: Cargo.toml
plugins/pluck/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/seance/: Cargo.toml
plugins/seance/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/shapeshift/: Cargo.toml
plugins/shapeshift/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/smudge/: Cargo.toml
plugins/smudge/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/snap/: Cargo.toml
plugins/snap/src/: dsp.rs  lib.rs  presets.rs  render_tests.rs
plugins/swarm/: Cargo.toml
plugins/swarm/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/tracer/: Cargo.toml
plugins/tracer/src/: dsp.rs  lib.rs  presets.rs
plugins/undertow/: Cargo.toml
plugins/undertow/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/voxfit/: Cargo.toml
plugins/voxfit/examples/: audition.rs
plugins/voxfit/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/voxfit/src/dsp/: biquad.rs
plugins/voxkey/: Cargo.toml
plugins/voxkey/examples/: audition.rs
plugins/voxkey/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/wire/: Cargo.toml
plugins/wire/src/: dsp.rs  lib.rs  presets.rs  tests.rs
plugins/xray/: Cargo.toml
plugins/xray/src/: lib.rs  tests.rs
pyscripts/: BreakChop.pyscript  DarkProgression.pyscript  RumbleBassline.pyscript
pyscripts/tests/: mock_fl.py  test_breakchop.py  test_darkprog.py  test_rumble.py
suite-core/: Cargo.toml
suite-core/src/: bus.rs  classify.rs  dsp.rs  fdn.rs  harness.rs  lib.rs  loudness.rs  manual.rs  modlisten.rs  pitch.rs  presets.rs  shift.rs  spectrum.rs  stft.rs  testsig.rs  ui.rs
tools/: audition.py  audition_batch.py  project_janitor.py  reference_gap.py  sample_librarian.py  session_bootstrap.py  tail_scan.py  test_audition.py  test_project_janitor.py  test_reference_gap.py  test_sample_librarian.py  test_session_bootstrap.py
tools/templates/: DNB.json  TECHNO.json
tools/tests/fixtures/: DNB.ops.json  TECHNO.ops.json
tools/vitalgen/vitalgen/: base_template.vital  test_vitalgen.py  vitalgen.py
tools/vitalgen/vitalgen/fixtures/: llm_response_enum_violation.json  llm_response_out_of_range.json  llm_response_valid.json
tools/voxrip/: test_voxrip.py  voxrip.py  voxrip_separate.py
xtask/: Cargo.toml
xtask/src/: main.rs
