[package]
name = "drift"
version = "0.1.0"
edition = "2021"
license = "ISC"
description = "Qeynos DRIFT — infinity filter (Shepard-tone filter illusion; N octave-spaced peak filters gliding over a log-freq range with a raised-cosine gain window ⇒ endless rise/fall)"

[lib]
# `cdylib` for the CLAP/VST3 bundle; `lib` so `cargo test` and the harness can link the DSP.
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { workspace = true }
nih_plug_egui = { workspace = true }
suite-core = { path = "../../suite-core" }

[dev-dependencies]
suite-core = { path = "../../suite-core" }
realfft = { workspace = true }
