[package]
name = "grit"
version = "0.1.0"
edition = "2021"
license = "ISC"
description = "Qeynos GRIT — sidechained distortion (env-drive + waveshape modes, 4x oversampled)"

[lib]
# `cdylib` for the CLAP/VST3 bundle; `lib` so `cargo test` and the harness can link the DSP.
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { workspace = true }
nih_plug_egui = { workspace = true }
suite-core = { path = "../../suite-core" }

[dev-dependencies]
suite-core = { path = "../../suite-core" }
