[package]
name = "ouroboros"
version = "0.1.0"
edition = "2021"
license = "ISC"
description = "Qeynos OUROBOROS — recursive feedback processor (delay loop with a reorderable 3-slot effect chain, in-loop limiter + DC blocker, freeze; Recurse clone)"

[lib]
# `cdylib` for the CLAP/VST3 bundle; `lib` so `cargo test` and the harness can link the DSP.
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { workspace = true }
nih_plug_egui = { workspace = true }
suite-core = { path = "../../suite-core" }

[dev-dependencies]
suite-core = { path = "../../suite-core" }
