[package]
name = "xray"
version = "0.1.0"
edition = "2021"
license = "ISC"
description = "Qeynos X-RAY — shared cross-plugin spectrum analyzer (reads every live suite instance's 32-band spectrum off the tier-2 bus and overlays them)"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { workspace = true }
nih_plug_egui = { workspace = true }
suite-core = { path = "../../suite-core" }

[dev-dependencies]
suite-core = { path = "../../suite-core" }
